<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iBeaconWifi測定</string>
    <string name="Timer">Timer (sec):</string>
    <string name="action_settings">Settings</string>
    <string name="OneReadingPerSec">One reading per:</string>
    <string name="Seconds">sec</string>
    <string name="Coordinates">Coordinates (m):</string>
    <string name="FoundBeacons">Found Beacons</string>
    <string name="TimerBtn">Start/Stop Timer</string>
    <string name="SetCoordinatesBtn">Set Coordinates</string>
    <string name="ViewLogBtn">View Log</string>
    <string name="mapCoordinates">mapCoordinates</string>
    <string name="saveBtn">Save</string>
    <string name="doneBtn">Done</string>
    <string name="mapCoordinatesforMapViewAct">Tap Map to Set Coordinates</string>
    <string name="ViewWifi">View Wifi AP</string>
    <string name="foundBeacons">foundBeacons</string>
    <string name="beaconsOnly">Beacons</string>
    <string name="wifiOnly">Wifi AP only</string>
    <string name="all">All</string>
    <string name="WifiAP">Wifi APs</string>


</resources>
