<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Timer"
        android:id="@+id/timerTV"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OneReadingPerSec"
        android:id="@+id/readingsPerSecTV"
        android:layout_below="@+id/timerTime"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/timerTime"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/readingsPerSecTV"
        android:text=""
        android:editable="true"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/readingsPerSec"
        android:text=""
        android:layout_alignTop="@+id/readingsPerSecTV"
        android:layout_toEndOf="@+id/readingsPerSecTV"
        android:editable="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Seconds"
        android:id="@+id/secTV"
        android:layout_alignTop="@+id/readingsPerSec"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimerBtn"
        android:id="@+id/timerBtn"
        android:onClick="onTimerButtonClick"
        android:layout_below="@+id/readingsPerSec"
        android:layout_alignStart="@+id/readingsPerSec"
        android:layout_alignEnd="@+id/readingsPerSec" />

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Coordinates"
        android:id="@+id/coordinates"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/timerBtn"
        android:layout_alignStart="@+id/setCoordBtn" /> -->

   <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapCoordinates"
        android:id="@+id/mapCoordinatesTV"
        android:layout_alignTop="@+id/coordinates"
        android:layout_alignEnd="@+id/readingsPerSec" /> -->

    <!--<Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetCoordinatesBtn"
        android:id="@+id/setCoordBtn"
        android:onClick="onSetCoordinatesButtonClick"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/coordinates"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="27dp" />-->

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View log"
        android:id="@+id/viewRecordBtn"
        android:onClick="onRecordLogButtonClick"
        android:layout_alignEnd="@+id/timerBtn"
        android:layout_below="@+id/timerBtn"
        android:layout_alignLeft="@+id/timerBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FoundBeacons"
        android:isScrollContainer="false"
        android:id="@+id/foundBeaconsLV"
        android:layout_below="@+id/viewRecordBtn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <!--<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/beaconsFound"
        android:layout_below="@+id/foundBeaconsLV"
        android:layout_alignEnd="@+id/viewRecordBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:gravity="left|bottom"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:editable="false"
        android:text="" />
        -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/beaconsFound"
        android:isScrollContainer="false"
        android:scrollbars="vertical"
        android:editable="false"
        android:text=""
        android:minHeight="70dp"
        android:maxHeight="70dp"
        android:layout_below="@+id/foundBeaconsLV"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <TextView
        android:isScrollContainer="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/foundWifiAP"
        android:scrollbars="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/WifiAPLabel"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <TextView
        android:isScrollContainer="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WifiAP"
        android:id="@+id/WifiAPLabel"
        android:layout_below="@+id/beaconsFound"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />


</RelativeLayout>
